# Precog-pm

./: .gitignore  ARCHITECTURE.md  Anchor.toml  README.md  docker-compose.yml
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: server.ts
backend/src/db/: index.ts
backend/src/db/prisma/: schema.prisma
backend/src/idl/: market_factory.json
backend/src/routes/: index.ts  market.ts  user.ts
backend/src/services/: arciumService.ts  encryptionService.ts  solanaService.ts
backend/src/utils/: env.ts  logger.ts  types.ts
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CreateMarketDialog.tsx  MarketCard.tsx  MarketDetailView.tsx  MyBetsView.tsx  PlaceBetDialog.tsx  WalletConnect.tsx
frontend/src/lib/: arcium-mock.ts  clipboard.ts  local-storage.ts  mock-data.ts  solana-client.ts  wallet-mock.ts
frontend/src/types/: index.ts
mxe/: Cargo.toml  README.md
mxe/src/: lib.rs  resolve_market.rs
programs/market_factory/: Cargo.toml
programs/market_factory/src/: lib.rs
scripts/: deploy_anchor.sh  deploy_mxe.sh  populate_markets.ts
