[package]
name = "resolve-market-mxe"
version = "0.1.0"
edition = "2021"

[dependencies]
# Arcium MXE dependencies (update with actual SDK when available)
# arcium-mpc = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
